tests/failing/03-tuple-struct-only-one-instance-of-type.rs
//! Only one instance of a type is allowed in the state

use derive_state::State;

#[derive(State)]
pub struct MyState(String, String);

fn main() {}
